tests/invalid/bytearray_unknown_method/main.py
ba: bytearray = bytearray(b"hi")
ba.foo()
